// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[NewFolder] Scanning files should save a new entry - root 1`] = `
Array [
  Album {
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyc2Vjb25k",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./second",
      "id": 1,
      "source": "second",
    },
  },
  Album {
    "dir": "",
    "id": 2,
    "inode": "c2VydmVyZmlyc3Q=",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./first",
      "id": 2,
      "source": "first",
    },
  },
  Album {
    "dir": "newAlbum",
    "id": 3,
    "inode": "Zmlyc3RuZXdBbGJ1bQ==",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./first",
      "id": 2,
      "source": "first",
    },
  },
]
`;

exports[`[NewFolder] Scanning files should save a new entry - sub-album 1`] = `
Array [
  Album {
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyc2Vjb25k",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./second",
      "id": 1,
      "source": "second",
    },
  },
  Album {
    "dir": "",
    "id": 2,
    "inode": "c2VydmVyZmlyc3Q=",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./first",
      "id": 2,
      "source": "first",
    },
  },
  Album {
    "dir": "album/newAlbum",
    "id": 3,
    "inode": "YWxidW1uZXdBbGJ1bQ==",
    "parentDir": "album",
    "photos": Array [],
    "source": "first",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./first",
      "id": 2,
      "source": "first",
    },
  },
]
`;

exports[`[NewFolder] Scanning files should save a new entry - sub-sub-album 1`] = `
Array [
  Album {
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyc2Vjb25k",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./second",
      "id": 1,
      "source": "second",
    },
  },
  Album {
    "dir": "",
    "id": 2,
    "inode": "c2VydmVyZmlyc3Q=",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./first",
      "id": 2,
      "source": "first",
    },
  },
  Album {
    "dir": "album1/album2/album3/album4/newAlbum",
    "id": 3,
    "inode": "YWxidW00bmV3QWxidW0=",
    "parentDir": "album1/album2/album3/album4",
    "photos": Array [],
    "source": "first",
    "sourceLk": Source {
      "albums": undefined,
      "dir": "./first",
      "id": 2,
      "source": "first",
    },
  },
]
`;
